initial rewrite from old portfolio

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,57 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: fit-content;
+  width: 100%;
+  margin: 0;
+}
+
+body {
+  background-color: #315162;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
+  overflow-wrap: anywhere;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Staatliches", sans-serif;
+}
+
+h1 {
+  font-size: 5rem;
+  margin: 2rem 0;
+}
+
+h2 {
+  font-size: 2.5rem;
+  margin: 0.5rem 0;
+}
+
+h3 {
+  font-size: 1.75rem;
+  color: #9dc4df;
+  margin: 0.25rem 0;
+}
+
+h4 {
+  margin: 0.2rem 0;
+  font-weight: normal;
+}
+
+a {
+  color: #8ec3de;
+}
+
+p {
+  font-size: 0.9rem;
+  line-height: 1.25rem;
+}
+
+.dark-section {
+  background-color: #21343c;
+  padding: 2rem;
+  margin: 3rem 0;
+  border-radius: 10px;
+}
