--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,71 +1,401 @@
 <section class="dark-section">
   <h2>Projects</h2>
-  <div class="project">
-    <div>
+  <div class="projects">
+    <div class="project">
+      <img
+        src="assets/projects/tensorflowscreenshot.png"
+        alt="Tensorflow Rocky Paper Scissors screenshot"
+      />
       <h3>Tensorflow Rock, Paper, Scissors (2024)</h3>
       <p>
-        This Angular site uses tensorflow.js, a library for machine learning in
-        Javascript to play Rock, Paper, Scissors. Video from the webcam is
-        passed to a pre-trained image recognition model that detects a hand and
-        returns 21 landmark keypoints indicating its position. The computer can
-        then play Rock, Paper, Scissors with varying levels of "intelligence".
+        This Angular site uses tensorflow.js, a library for machine learning, to
+        play Rock, Paper, Scissors. Video from the webcam is passed to a
+        pre-trained image recognition model that detects a hand and returns 21
+        landmark keypoints. The computer can then play Rock, Paper, Scissors
+        with varying levels of "intelligence".
       </p>
       <p>
         The site is currently live at
         <a target="_blank" href="https://tensorflowrockpaperscissors.web.app/"
           >tensorflowrockpaperscissors.web.app</a
-        >. Code is available on
+        >. Code is available at
         <a
           target="_blank"
           href="https://github.com/reaganhenke/rockpaperscissors"
-          >Github</a
+          >RockPaperScissors Github</a
         >.
       </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Web Development</span>
+          <span>Angular</span>
+          <span>UI/UX Design</span>
+          <span>Machine Learning</span>
+        </div>
+      </div>
     </div>
-    <img
-      src="assets/projects/tensorflowscreenshot.png"
-      alt="Tensorflow Rocky Paper Scissors screenshot"
-    />
-  </div>
-  <div class="project">
-    <div>
+    <div class="project">
+      <img
+        src="assets/projects/myfamilytree.png"
+        alt="My Family Tree Game screenshot"
+      />
+      <h3>My Family Tree (2023)</h3>
+      <p>
+        <em>My Family Tree</em> is a short narrative game about piecing together
+        your family tree from phone calls for a school project. I drew all the
+        art in Procreate and programmed the game in Unity/C#. I recorded the
+        voices and most of the sound effects myself.
+      </p>
+      <p>
+        The game has gone viral a handful of times, and was picked up by a
+        handful of large streamers across the globe, resulting in over 100k
+        people playing it themselves!
+      </p>
+
+      <p>
+        The game is available to play at
+        <a target="_blank" href="https://ifthencreate.itch.io/myfamilytree"
+          >My Family Tree on itch.io</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Game Development</span>
+          <span>Procreate</span>
+          <span>Unity</span>
+          <span>C#</span>
+          <span>Sound Design</span>
+          <span>Writing</span>
+          <span>Illustration</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/lifeinthepastalane.png"
+        alt="Life in the Pasta Lane Game screenshot"
+      />
+      <h3>Life in the Pasta Lane (2023)</h3>
+      <p>
+        <em>Life in the Pasta Lane</em> is a fast paced cooking game were you
+        cook italian food for hungry (and loud) customers.
+      </p>
+      <p>
+        I drew all the art in Procreate and programmed the game in Unity/C#.
+        Besides the voices, I recorded most of the sound effects myself!
+      </p>
+
+      <p>
+        The game is available to play at
+        <a
+          target="_blank"
+          href="https://ifthencreate.itch.io/life-in-the-pasta-lane"
+          >Life in the Pasta Lane on itch.io</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Game Development</span>
+          <span>Procreate</span>
+          <span>Unity</span>
+          <span>C#</span>
+          <span>Sound Design</span>
+          <span>Illustration</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/loveinthevalley.png"
+        alt="Love in the Valley Game screenshot"
+      />
+      <h3>Love in the Valley (2022)</h3>
+      <p>
+        <em>Love in the Valley</em> is a Stardew Valley + Monster Prom fan
+        project where you can play as Sebastian or Abigail and try to romance
+        the farmer by the spring flower dance at the end of the week.
+      </p>
+      <p>
+        I led and organized the team, wrote the code, did UI design, sound
+        design, wrote some scenes and made some assets. Over 300 volunteers
+        joined the discord, and 8 people ended up contributing to the final
+        project!
+      </p>
+      <p>
+        The game is available to play at
+        <a
+          target="_blank"
+          href="https://ifthencreate.itch.io/love-in-the-valley"
+          >Love in the Valley on itch.io</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Game Development</span>
+          <span>Project Management</span>
+          <span>Unity</span>
+          <span>C#</span>
+          <span>UI/UX Design</span>
+          <span>Sound Design</span>
+          <span>Writing</span>
+          <span>Problem Solving</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img src="assets/projects/dcrocky.png" alt="DC Rocky Horror screenshot" />
+      <h3>Sonic Transducers Website (2022)</h3>
+      <p>
+        The Sonic Transducers are Washington DC's Rocky Horror Picture Show
+        shadowcast! I made them a website to advertise their monthly shows. The
+        site gets a few hundred visitors a month (which jumps to a few thousand
+        around Halloween)!
+      </p>
+      <p>
+        You can check out the Sonic Transducers and their website at
+        <a target="_blank" href="https://dcrockyhorror.com/"
+          >DCRockyHorror.com</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Web Design</span>
+          <span>UI/UX Design</span>
+          <span>Angular</span>
+          <span>Communication</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/narrativegametemplate.png"
+        alt="Narrative Game Template screenshot"
+      />
+      <h3>Narrative Game Template (2022)</h3>
+      <p>
+        After participating in a few game jams on itch.io, I saw a neat
+        opportunity to tie together my interests in web development and game
+        development. I coded this narrative game template using only HTML, CSS,
+        and Javascript, and then published the code on Github with instructions
+        for use so new developers could practice their skills with a fun
+        project.
+      </p>
+      <p>
+        You can find the
+        <a target="_blank" href="https://github.com/reaganhenke/narrative-game"
+          >narrative game code on Github</a
+        >
+        and the
+        <a
+          target="_blank"
+          href="https://ifthencreate.itch.io/narrativegametemplate"
+          >narrative game on itch.io</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Web Design</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>Javascript</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/broadwaybods.png"
+        alt="Broadway Bods Website screenshot"
+      />
+      <h3>Broadway Bods Website (2022)</h3>
+      <p>
+        Broadway Bods is a New York based theater project that aims to provide
+        opportunities for performers in larger bodies.
+      </p>
+      <p>
+        I serve on their nonprofit board and created their logo and website. I
+        also created a second site for them to serve as a content management
+        system, where the other board members can update event dates without me
+        needing to do so manually.
+      </p>
+      <p>
+        You can check out Broadway Bods at
+        <a target="_blank" href="https://broadwaybods.com/">BroadwayBods.com</a>
+        as well as the custom CMS I build for them at
+        <a
+          target="_blank"
+          href="https://broadwaybods-cms.netlify.app/#/collections/links"
+          >broadwaybods-cms.netlify.app</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Nonprofit</span>
+          <span>Graphic Design</span>
+          <span>Angular</span>
+          <span>React</span>
+          <span>Communication</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/lonelywitchalchemy.png"
+        alt="Lonely Witch Alchemy Game screenshot"
+      />
+      <h3>Lonely Witch Alchemy (2022)</h3>
+      <p>
+        Lonely Witch Alchemy is an alchemy merge game where you play as a lonely
+        witch after the rest of your village has fallen ill. You need to make do
+        with things you find around you, merge them together, and hopefully find
+        a cure to heal the rest of your village.
+      </p>
+      <p>
+        The full game is available to play at
+        <a target="_blank" href="https://lonelywitchalchemy.com/"
+          >LonelyWitchAlchemy.com</a
+        >
+        . If you need a cheat sheet, you can grab one at
+        <a
+          target="_blank"
+          href="https://ifthencreate.itch.io/lonely-witch-alchemy"
+          >Lonely Witch Alchemy on itch.io</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Game Design</span>
+          <span>Writing</span>
+          <span>Angular</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/costumedb.png"
+        alt="Costume Database screenshot"
+      />
+      <h3>CostumeDB (2021)</h3>
+      <p>
+        Finding the right Halloween costume for your group can be tricky.
+        Luckily, I made a website for that! CostumeDB allows you to search for
+        group costumes based on group size, hair color, and gender.
+      </p>
+
+      <p>
+        The website is powered by another Github repo that serves as a backend,
+        where anyone can contribute their costume ideas!
+      </p>
+      <p>
+        You can find the perfect costume at
+        <a target="_blank" href="https://costumedatabase.com/groupsearch"
+          >CostumeDatabase.com</a
+        >, and the
+        <a
+          target="_blank"
+          href="https://github.com/reaganhenke/costume-db-backend"
+          >backend repository on Github</a
+        >.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>UI/UI Design</span>
+          <span>Angular</span>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/imissmycafe.png"
+        alt="I Miss My Cafe screenshot"
+      />
       <h3>I Miss My Cafe (2021 - present)</h3>
       <p>
         Inspired by sites like IMissTheOffice, IMissMyBar, and Coffitivity, I
         teamed up with sound designer
-        <a target="_blank" href="https://www.evancook.audio/">evan cook</a> and
-        made a site with a coffee shop ambience for working from home. The site
-        has Spotify integration, volume controls, and custom components.
+        <a target="_blank" href="https://www.evancook.audio/">evan cook</a>
+        and made a site with a coffee shop ambience for working from home. The
+        site has Spotify integration, volume controls, and custom components.
       </p>
       <p>
-        IMissMyCafe has gone viral a handful of times, and has had over 2
-        million visitors from all around the world!
+        IMissMyCafe has gone viral a handful of times, and has had over
+        <em>two million visitors</em> from all around the world!
       </p>
       <p>
         The site is currently live at
         <a target="_blank" href="https://imissmycafe.com/">IMissMyCafe.com</a>.
       </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Web Development</span>
+          <span>Angular</span>
+          <span>Illustration</span>
+          <span>Voiceover</span>
+          <span>Sound Design</span>
+          <span>UI/UX Design</span>
+        </div>
+      </div>
     </div>
-    <img
-      src="assets/projects/imissmycafe.png"
-      alt="I Miss My Cafe screenshot"
-    />
-  </div>
-  <div class="project">
-    <div>
-      <h3>Pie Puzzles (2020)</h3>
-      <p>
-        I started an Etsy shop in lockdown. I baked pies and had them printed on
-        small puzzles and pins. This has been really fun project that allowed me
-        to stay connected and share my baking with friends in quarantine. I've
-        also done a few raffles and been able to raise money for causes I care
-        about!
-      </p>
+    <div class="project">
+        <img
+          src="assets/projects/ifthencreate.png"
+          alt="Etsy Shop screenshot"
+        />
+        <h3>Pie Puzzles (2020)</h3>
+        <p>
+          During lockdown in 2020, I started a Etsy shop and sold pie puzzles! I
+          baked pies and had them printed on small puzzles and pins. It was such
+          a blast to be able to connect and share my baking with people
+          virtually, and I was even able to raise some money for causes I care
+          about through giveaways and raffles!
+        </p>
+        <div class="skills">
+          <h4>Related Skills:</h4>
+          <div class="tags">
+            <span>Graphic Design</span>
+            <span>Marketing</span>
+            <span>Fundraising</span>
+          </div>
+        </div>
     </div>
-    <img src="assets/projects/ifthencreate.png" alt="Etsy Shop screenshot" />
-  </div>
-  <div class="project">
-    <div>
+    <div class="project">
+      <video controls loop [muted]="'muted'" alt="Peach Fish Animation">
+        <source src="assets/projects/peachfish.mov"/>
+      </video>
+      <h3>Peach Fish Animation (2019)</h3>
+        <p>
+          I love pushing the limits of CSS and web development, and this one is
+          my most popular Codepen project. My Peach Fish pen was a result of a
+          challenge I issued to myself to make an animation without adding any
+          HTML at all.
+        </p>
+        <p>
+          I have a handful of smaller CSS focused projects you can check out on
+          my
+          <a target="_blank" href="https://codepen.io/">Codepen</a>.
+        </p>
+        <div class="skills">
+          <h4>Related Skills:</h4>
+          <div class="tags">
+            <span>Web Development</span>
+            <span>CSS</span>
+          </div>
+        </div>
+    </div>
+    <div class="project">
+      <img
+        src="assets/projects/ministryoftruth.png"
+        alt="Ministry of Truth screenshot"
+      />
       <h3>Ministry of Truth (2017)</h3>
       <p>
         I developed Ministry of Truth as part of Capital One's Developer Academy
@@ -79,14 +409,17 @@
           >ministryoftruth.surge.sh</a
         >.
       </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>HTML</span>
+          <span>Javascript</span>
+          <span>CSS</span>
+        </div>
+      </div>
     </div>
-    <img
-      src="assets/projects/ministryoftruth.png"
-      alt="Ministry of Truth screenshot"
-    />
-  </div>
-  <div class="project">
-    <div>
+    <div class="project">
+      <img src="assets/projects/spambot_demo.png" alt="Spam Bot screenshot" />
       <h3>SpamBot (2016)</h3>
       <p>
         SpamBot is a Google Sheets add-on I wrote to get responses to Google
@@ -96,11 +429,17 @@
         respondant lists.
       </p>
       <p>SpamBot is no longer maintained or available to download.</p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Javascript</span>
+        </div>
+      </div>
     </div>
-    <img src="assets/projects/spambot_demo.png" alt="Spam Bot screenshot" />
-  </div>
-  <div class="project">
-    <div>
+    <div class="project">
+      <video controls loop [muted]="'muted'" alt="8 Bit Campus Demo">
+        <source src="assets/projects/8bitclips.mp4" type="video/mp4" />
+      </video>
       <h3>8Bit Campus (2016)</h3>
       <p>
         8Bit Campus is a game I wrote using Python and Pygame, inspired by my
@@ -119,13 +458,19 @@
           >Youtube</a
         >.
       </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Game Design</span>
+          <span>Illustration</span>
+          <span>Python</span>
+        </div>
+      </div>
     </div>
-    <video controls loop [muted]="'muted'" alt="8 Bit Campus Demo">
-      <source src="assets/projects/8bitclips.mp4" type="video/mp4" />
-    </video>
-  </div>
-  <div class="project">
-    <div>
+    <div class="project">
+      <video controls loop [muted]="'muted'" alt="Markoc String Quartet Demo">
+        <source src="assets/projects/musicclips.mp4" type="video/mp4" />
+      </video>
       <h3>Markov String Quartet Generator (2016)</h3>
       <p>
         At Carnegie Mellon, I studied composition and computational techniques,
@@ -137,13 +482,18 @@
         You can watch a demo on
         <a target="_blank" href="https://youtu.be/Dr5jtUAfFxc">YouTube</a>.
       </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Music</span>
+          <span>Real Time Processing</span>
+        </div>
+      </div>
     </div>
-    <video controls loop [muted]="'muted'" alt="Markoc String Quartet Demo">
-      <source src="assets/projects/musicclips.mp4" type="video/mp4" />
-    </video>
-  </div>
-  <div class="project">
-    <div>
+    <div class="project">
+      <video controls loop [muted]="'muted'" alt="Knit Wit Demo">
+        <source src="assets/projects/knitclips.mp4" type="video/mp4" />
+      </video>
       <h3>KnitWit (2014)</h3>
       <p>
         I studied Python at Carnegie Mellon as part of my Fundamentals of
@@ -156,9 +506,14 @@
           >YouTube</a
         >.
       </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Game Design</span>
+          <span>Python</span>
+        </div>
+      </div>
     </div>
-    <video controls loop [muted]="'muted'" alt="Knit Wit Demo">
-      <source src="assets/projects/knitclips.mp4" type="video/mp4" />
-    </video>
+    <div class="project"></div>
   </div>
 </section>
