clean up projects

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -43,9 +43,9 @@
       <h3>My Family Tree (2023)</h3>
       <p>
         <em>My Family Tree</em> is a short narrative game about piecing together
-        your family tree from phone calls for a school project. I drew all the
-        art in Procreate and programmed the game in Unity/C#. I recorded the
-        voices and most of the sound effects myself.
+        your family tree for a school project. I drew all the art in Procreate
+        and programmed the game in Unity/C#. I recorded the voices and most of
+        the sound effects myself.
       </p>
       <p>
         The game has gone viral a handful of times, and was picked up by a
@@ -115,8 +115,7 @@
       <h3>Love in the Valley (2022)</h3>
       <p>
         <em>Love in the Valley</em> is a Stardew Valley + Monster Prom fan
-        project where you can play as Sebastian or Abigail and try to romance
-        the farmer by the spring flower dance at the end of the week.
+        project!
       </p>
       <p>
         I led and organized the team, wrote the code, did UI design, sound
@@ -178,12 +177,11 @@
       />
       <h3>Narrative Game Template (2022)</h3>
       <p>
-        After participating in a few game jams on itch.io, I saw a neat
-        opportunity to tie together my interests in web development and game
-        development. I coded this narrative game template using only HTML, CSS,
-        and Javascript, and then published the code on Github with instructions
-        for use so new developers could practice their skills with a fun
-        project.
+        After participating in a few game jams on itch.io, I saw an opportunity
+        to tie together my interests in web development and game development. I
+        wrote this narrative game template using only HTML, CSS, and Javascript,
+        and published the code on Github with instructions for use so new
+        developers could practice their skills with a fun project.
       </p>
       <p>
         You can find the
@@ -214,14 +212,13 @@
       />
       <h3>Broadway Bods Website (2022)</h3>
       <p>
-        Broadway Bods is a New York based theater project that aims to provide
-        opportunities for performers in larger bodies.
+        Broadway Bods is a fat positive theater organization in New York. I
+        serve on their nonprofit board and created their logo and website.
       </p>
       <p>
-        I serve on their nonprofit board and created their logo and website. I
-        also created a second site for them to serve as a content management
-        system, where the other board members can update event dates without me
-        needing to do so manually.
+        I also created a custom content management system for them, where the
+        other board members can update event dates without needing to write
+        code.
       </p>
       <p>
         You can check out Broadway Bods at
@@ -282,7 +279,7 @@
         src="assets/projects/costumedb.png"
         alt="Costume Database screenshot"
       />
-      <h3>CostumeDB (2021)</h3>
+      <h3>Costume Database (2021)</h3>
       <p>
         Finding the right Halloween costume for your group can be tricky.
         Luckily, I made a website for that! CostumeDB allows you to search for
@@ -307,7 +304,7 @@
       <div class="skills">
         <h4>Related Skills:</h4>
         <div class="tags">
-          <span>UI/UI Design</span>
+          <span>UI/UX Design</span>
           <span>Angular</span>
         </div>
       </div>
@@ -346,50 +343,46 @@
       </div>
     </div>
     <div class="project">
-        <img
-          src="assets/projects/ifthencreate.png"
-          alt="Etsy Shop screenshot"
-        />
-        <h3>Pie Puzzles (2020)</h3>
-        <p>
-          During lockdown in 2020, I started a Etsy shop and sold pie puzzles! I
-          baked pies and had them printed on small puzzles and pins. It was such
-          a blast to be able to connect and share my baking with people
-          virtually, and I was even able to raise some money for causes I care
-          about through giveaways and raffles!
-        </p>
-        <div class="skills">
-          <h4>Related Skills:</h4>
-          <div class="tags">
-            <span>Graphic Design</span>
-            <span>Marketing</span>
-            <span>Fundraising</span>
-          </div>
+      <img src="assets/projects/ifthencreate.png" alt="Etsy Shop screenshot" />
+      <h3>Pie Puzzles (2020)</h3>
+      <p>
+        During lockdown in 2020, I started a Etsy shop and sold pie puzzles! I
+        baked pies and had them printed on small puzzles and pins. It was such a
+        blast to be able to connect and share my baking with people virtually,
+        and I was even able to raise some money for causes I care about through
+        giveaways and raffles!
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Graphic Design</span>
+          <span>Marketing</span>
+          <span>Fundraising</span>
         </div>
+      </div>
     </div>
     <div class="project">
       <video controls loop [muted]="'muted'" alt="Peach Fish Animation">
-        <source src="assets/projects/peachfish.mov"/>
+        <source src="assets/projects/peachfish.mov" />
       </video>
       <h3>Peach Fish Animation (2019)</h3>
-        <p>
-          I love pushing the limits of CSS and web development, and this one is
-          my most popular Codepen project. My Peach Fish pen was a result of a
-          challenge I issued to myself to make an animation without adding any
-          HTML at all.
-        </p>
-        <p>
-          I have a handful of smaller CSS focused projects you can check out on
-          my
-          <a target="_blank" href="https://codepen.io/">Codepen</a>.
-        </p>
-        <div class="skills">
-          <h4>Related Skills:</h4>
-          <div class="tags">
-            <span>Web Development</span>
-            <span>CSS</span>
-          </div>
+      <p>
+        I love pushing the limits of CSS and web development, and this one is my
+        most popular Codepen project. My Peach Fish pen was a result of a
+        challenge I issued to myself to make an animation without adding any
+        HTML at all.
+      </p>
+      <p>
+        I have a handful of smaller CSS focused projects you can check out on my
+        <a target="_blank" href="https://codepen.io/ifthencreate/pens/popular">Codepen</a>.
+      </p>
+      <div class="skills">
+        <h4>Related Skills:</h4>
+        <div class="tags">
+          <span>Web Development</span>
+          <span>CSS</span>
         </div>
+      </div>
     </div>
     <div class="project">
       <img
@@ -450,12 +443,12 @@
         notes.
       </p>
       <p>
-        You can find the demo code on my
+        You can find the 
         <a target="_blank" href="https://github.com/reaganhenke/8Bit-Campus"
-          >GitHub</a
-        >, and watch the demo in action on
+          >8Bit Campus code on my GitHub</a
+        >, and 
         <a target="_blank" href="https://www.youtube.com/watch?v=OoftmZGZqFw"
-          >Youtube</a
+          >watch 8Bit Campus in action on Youtube</a
         >.
       </p>
       <div class="skills">
@@ -479,8 +472,8 @@
         controlled by a TouchOSC app.
       </p>
       <p>
-        You can watch a demo on
-        <a target="_blank" href="https://youtu.be/Dr5jtUAfFxc">YouTube</a>.
+        You can watch a 
+        <a target="_blank" href="https://youtu.be/Dr5jtUAfFxc">Markov Quartet demo on YouTube</a>.
       </p>
       <div class="skills">
         <h4>Related Skills:</h4>
@@ -501,9 +494,9 @@
         could be used to design sweater knitting patterns.
       </p>
       <p>
-        You can watch a demo on
+        You can watch a 
         <a target="_blank" href="https://www.youtube.com/watch?v=jTIaIkjy08Y"
-          >YouTube</a
+          >KnitWit demo on YouTube</a
         >.
       </p>
       <div class="skills">
