add github link in footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,11 @@
   <app-projects></app-projects>
   <app-experience></app-experience>
 </main>
+<footer>
+  <span
+    >interested in the code behind this site? check it out on
+    <a target="_blank" href="https://github.com/reaganhenke/reagan-portfolio"
+      >github/reaganhenke</a
+    ></span
+  >
+</footer>
