--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,9 @@ main {
   color: #fff;
   box-sizing: border-box;
 }
+
+footer {
+  text-align: center;
+  font-size: 0.75rem;
+  margin-bottom: 1rem;
+}
