--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,4 +1,5 @@
 <section class="dark-section">
+  <a class="resume" href="assets/reaganhenkeresume.pdf" download><img src="assets/download.svg" alt="">download my resume</a>
   <h2>Experience</h2>
   <div class="jobs">
     <div class="job">
